--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,9 @@
                     <button type="submit" class="mt-4 px-4 py-2 rounded-lg bg-orange-600 text-white">Prediksi Nasib</button>
                 </div>
             </form>
+			<p class="text-center text-gray-800 text-xs mt-6">
+				Powered By <a href="https://i-as.dev/" class="text-rose-600" target="_blank">I-As.Dev</a> | <a href="https://github.com/fitri-hy/cek-masa-depan-nodejs.git" class="text-rose-600" target="_blank">Github</a>
+			</p>
         </div>
         <div id="overlay" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-70 flex items-center justify-center hidden">
 			<div class="bg-orange-100 p-6 rounded-lg max-w-md">
