--- a/views/result.ejs
+++ b/views/result.ejs
@@ -16,7 +16,8 @@
 	<img class="h-screen w-full object-cover absolute -z-10" src="https://i.pinimg.com/originals/85/db/41/85db411e5bebff00b8a21f6d29d8c394.gif">
     <div class="h-screen w-full flex items-center justify-center backdrop-blur-sm p-6">
         <div class="flex flex-col justify-center items-center bg-orange-300/70 py-9 px-6 rounded-lg shadow-lg border border-orange-300 shadow-lg max-w-md">
-            <h1 class="text-center text-orange-600 text-3xl font-extrabold">
+            <img src="/logo.png" class="h-36 w-36 m-auto">
+            <h1 class="text-center text-orange-600 text-3xl font-extrabold mt-2">
                 Hasil Prediksi
             </h1>
             <p class="text-orange-600 px-6 text-center mt-2">
